<resources>
    <string name="app_name">Linking Talent</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to Facebook -->
    <string name="fb_login_protocol_scheme">fb1821955051411508</string>
    <string name="facebook_app_id">1821955051411508</string>

    <!-- Main menu strings -->

    <!-- Settings Menu strings -->
    <string name="action_about">About</string>
    <string name="action_terms">Terms</string>
    <string name="action_signout">Sign Out</string>

    <!-- User Preferences -->
    <string name="LOCAL_PREFERENCES">local_preferences</string>

    <string name="key_user_id">key_user_id</string>
    <string name="pref_user_id"></string>

    <string name="key_user_img"></string>
    <string name="pref_user_img"></string>

    <string name="key_name">key_name</string>
    <string name="pref_name">Firstname Lastname</string>


    <string name="pref_email">do-not-reply@linkingtalent.com</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Create Job -->
    <string name="create_job_title_hint">Job title</string>
    <string name="create_job_company_hint">Company name</string>
    <string name="create_job_category_hint">Job Category</string>
    <string name="create_job_first_cat_hint">Primary Category</string>
    <string name="create_job_second_cat_hint">Secondary Category</string>
    <string name="create_job_location_hint">Location</string>
    <string name="create_job_descrition_hint">Description</string>
    <string name="create_job_bounty">Bounty</string>

    <string-array name="pay_array">
        <item>5000</item>
        <item>10000</item>
        <item>15000</item>
        <item>20000</item>
        <item>25000</item>
        <item>30000</item>
        <item>35000</item>
        <item>30000</item>
        <item>45000</item>
        <item>50000</item>
    </string-array>

    <string-array name="employment_array">
        <item>Full Time</item>
        <item>Part Time</item>
        <item>Temporary</item>
        <item>Contract</item>
    </string-array>

    <!-- View Job -->
    <string name="view_job_text_view_size">15dp</string>
    <string name="view_job_employment_type">Employment Type</string>

    <!--View job menu -->
    <string name="view_job_menu_share">Share</string>
    <string name="view_job_menu_info">More Info</string>
    <string name="view_job_menu_apply">Apply</string>

    <!-- Oauth -->
    <string name="auth0_client_id">38C3pMcJ42qugdzK39MJ0gModxV1neI0</string>
    <string name="auth0_domain">falzonm.auth0.com</string>

    <string-array name="job_category_array">
        <item>Accounting</item>
        <item>Administrative / Clerical</item>
        <item>Advertising / Promotion / PR</item>
        <item>Agriculture / Forestry</item>
        <item>Airlines / Tourism</item>
        <item>Architecture / Interior Design</item>
        <item>Arts / Design</item>
        <item>Auditing</item>
        <item>Auto / Automotive</item>
        <item>Banking</item>
        <item>Chemical / Biochemical</item>
        <item>Civil / Construction</item>
        <item>Consulting</item>
        <item>Customer Service</item>
        <item>Doctors</item>
        <item>Doctors / Nurses</item>
        <item>Education / Training</item>
        <item>Electrical / Electronics</item>
        <item>Entry Level</item>
        <item>Environment / Waste Services</item>
        <item>Executive Management</item>
        <item>Expatriate jobs in Vietnam</item>
        <item>Export-Import</item>
        <item>Fashion / Lifestyle</item>
        <item>Geology / Mineral</item>
        <item>Finance / Investment</item>
        <item>FMCG</item>
        <item>Food &amp; Beverage</item>
        <item>Freight / Logistics</item>
        <item>Health / Medical Care</item>
        <item>High Technology</item>
        <item>Household</item>
        <item>HSE</item>
        <item>Human Resources</item>
        <item>HVAC</item>
        <item>Industrial Products</item>
        <item>Insurance</item>
        <item>Internet / Online Media</item>
        <item>Interpreter / Translator</item>
        <item>IT - Hardware / Networking</item>
        <item>IT - Software</item>
        <item>Legal / Contracts</item>
        <item>Luxury Goods</item>
        <item>Maintenance</item>
        <item>Marine</item>
        <item>Marketing</item>
        <item>Mechanical</item>
        <item>Merchandising / Purchasing / Supply Chain</item>
        <item>NGO / Non-Profit</item>
        <item>Oil / Gas</item>
        <item>Overseas Jobs</item>
        <item>Pharmaceutical / Biotech</item>
        <item>Pharmaceutical representatives</item>
        <item>Pharmacist</item>
        <item>Planning / projects</item>
        <item>Printing</item>
        <item>Production / Process</item>
        <item>QA / QC</item>
        <item>Real Estate</item>
        <item>Restaurant / Hotel</item>
        <item>Retail / Wholesale</item>
        <item>Sales</item>
        <item>Sales Technical</item>
        <item>Securities &amp; Trading</item>
        <item>Telecommunications</item>
        <item>Temporary / Contract</item>
        <item>Textiles / Garments / Footwear</item>
        <item>TV / Media / Newspaper</item>
        <item>Warehouse</item>
        <item>Others</item>
    </string-array>

</resources>
