<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/job_action_share"
        android:enabled="true"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/view_job_menu_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/job_action_info"
        android:enabled="true"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/view_job_menu_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/job_action_apply"
        android:enabled="true"
        android:icon="@drawable/ic_play_light"
        android:title="@string/view_job_menu_apply"
        app:showAsAction="ifRoom" />
</menu>