<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    tools:context="com.empoweredstartups.linkingtalent.CreateJobFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF">

<LinearLayout android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="120dp"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/create_job_title"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:hint="@string/create_job_title_hint"
        android:textSize="30dp"
        android:layout_above="@+id/create_job_company_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp"/>

    <EditText
        android:id="@+id/create_job_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/create_job_company_hint"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/create_job_photo_picker"
        android:layout_toStartOf="@+id/create_job_photo_picker"/>

    <ImageButton
        android:id="@+id/create_job_photo_picker"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@android:drawable/ic_menu_gallery"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>




    <Spinner
        android:id="@+id/create_job_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/job_category_array"
        >
    </Spinner>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp">
        <TextView
            android:id="@+id/create_job_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/create_job_location_hint"
            android:textSize="20dp"
            android:paddingTop="5dp"
            />

        <ImageButton
            android:id="@+id/create_job_location_button"
            android:layout_width="53dp"
            android:layout_height="match_parent"
            android:src="@drawable/location_btn"
            android:scaleType="fitCenter"
            android:layout_margin="0dp"
            android:background="@null"/>

    </LinearLayout>
    <EditText
        android:id="@+id/create_job_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/create_job_descrition_hint"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <SeekBar
            android:id="@+id/create_job_seekBar"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:minHeight="50dp"
            android:maxHeight="80dp"
            android:max="3000"/>

        <TextView
            android:id="@+id/create_job_tv_bounty_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="Set Bounty"/>

    </LinearLayout>


    <Spinner
        android:id="@+id/create_job_min_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/pay_array">
    </Spinner>

    <Spinner
        android:id="@+id/create_job_max_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/pay_array">
    </Spinner>

    <Spinner
        android:id="@+id/create_job_employment_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/employment_array">
    </Spinner>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Insert Data"
        android:id="@+id/create_job_insert_button"/>

</LinearLayout>

</ScrollView>